src/test/testData/highlighting/duplicateVariables.mod
dvar int x;
dvar int <error descr="Variable 'x' is already defined">x</error>;
